--- a/AppHelp/app/src/main/res/values/strings.xml
+++ b/AppHelp/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">AppHelp</string>
+    <string name="title_activity_pagina_principal">PaginaPrincipal</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
